--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Juuso Kiviranta homepage"
+title                    : "Juuso Kiviranta"
 title_separator          : "-"
 name                     : &name "Juuso Kiviranta"
 description              : &description "Doctoral researcher in Economics at KU Leuven"
