--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
 
   - title: "CV"
     #url: /cv/
-    url: /files/CV__Juuso_Kiviranta
+    url: /files/CV__Juuso_Kiviranta.pdf/
 
   - title: "European electricity markets"
     url: /eur_elec_markets/
