--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,15 +5,15 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Research"
-    url: research
+  #- title: "Research"
+  #  url: research
 
   - title: "CV"
     #url: /cv/
     url: files/CV__Juuso_Kiviranta.pdf
 
-  - title: "European electricity markets"
-    url: eur_elec_markets
+  #- title: "European electricity markets"
+  #  url: eur_elec_markets
 
   #- title: "Talks"
   #  url: /talks/    
