--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
     #url: /cv/
     url: files/CV__Juuso_Kiviranta.pdf
 
-  #- title: "European electricity markets"
-  #  url: eur_elec_markets
+  - title: "European electricity markets"
+    url: eur_elec_markets
 
   #- title: "Talks"
   #  url: /talks/    
