--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,3 +14,6 @@ main:
 
   - title: "European electricity markets"
     url: /eur-elec-markets/
+
+  - title: "European electricity markets 2"
+    url: /eur-elec-markets2/
